# locus

./: .gitignore  BRAINSTORMING.md  CLAUDE.md  CONTEXT.md  MOBILE_PLAN.md  PLAN_WORK.md  WORKLOG.md  install.sh  pyproject.toml  uninstall.sh
data/: session_status.json  undo_stack.json
hammerspoon/: locus_hotkey.lua
launchd/: com.locus.plist
locus/: chat.py  cli.py  context.py  priorities.py  session_status.py  status_cli.py  tools.py
locus/commands/: drop.py  focus.py  morning.py  note.py  priority.py  session.py  status.py  think.py
templates/: PRIORITIES.md
tests/: test_commands.py  test_context.py  test_install.py  test_priorities.py  test_server.py  test_session_status.py  test_tools.py
web/: server.py
web/static/: app.js  manifest.json  style.css  sw.js
web/templates/: index.html
